# Healthcare-ML-Project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-train.txt  requirements.txt
.github/workflows/: retrain.yml
app/: main.py  model_loader.py  routes.py  schemas.py  utils.py
dags/: retrain_dag.py
database/: db_connection.py  models.py  queries.sql
frontend/: index.html
ml/: evaluate.py  predict.py  preprocess.py  train.py
models/: encoders.joblib
notebooks/: analysis.ipynb
scripts/: clean.py  ingest.py  load.py
tests/: test_api.py  test_model.py
